Tests/CompilerTests/negative/invalid-annotation.expected
negative/invalid-annotation.hylo:3.2-4: error: extraneous whitespace between '@' and annotation identifier
@  blah
 ~~
negative/invalid-annotation.hylo:7.3-8: error: invalid annotation
  @blah let x: Void
  ~~~~~
negative/invalid-annotation.hylo:8.3-8: error: invalid annotation
  @blah typealias T = Void
  ~~~~~
negative/invalid-annotation.hylo:12.3-8: error: invalid annotation
  @blah type X
  ~~~~~
negative/invalid-annotation.hylo:15.1-6: error: invalid annotation
@blah extension Void {}
~~~~~
negative/invalid-annotation.hylo:17.1-6: error: invalid annotation
@blah given Void is P {}
~~~~~
